--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       const code = document.getElementById('code').value;
 
       try {
-        const response = await fetch('http://localhost:8080/api/ollama', {
+        const response = await fetch('http://localhost:8080/api/complexity/analyzer', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
@@ -65,8 +65,6 @@
           throw new Error(`HTTP error! status: ${response.status}`);
         }
 
-        // const data = await response.text(); // or .json() if you return JSON
-        // resultDiv.textContent = data;
         const data = await response.json();
         resultDiv.textContent = data.complexity;
 
